deploy/dev/microservice-demo-app.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: microservice-demo-default
  labels:
    app: microservice-demo-default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-demo-default
  template:
    metadata:
      labels:
        app: microservice-demo-default
    spec:
       containers:
        - args:
            - registration
          image: >-
            registry-intl-vpc.ap-northeast-1.aliyuncs.com/krca001/microservice-demo:2019-11-10_19-35-28.915_KST
          imagePullPolicy: IfNotPresent
          name: microservice-demo-default-0
          ports:
            - containerPort: 1111
              hostPort: 1111
              name: p1111
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - args:
            - accounts
          image: >-
            registry-intl-vpc.ap-northeast-1.aliyuncs.com/krca001/microservice-demo:2019-11-10_19-42-17.248_KST
          imagePullPolicy: IfNotPresent
          name: microservice-demo-default-1
          ports:
            - containerPort: 2222
              hostPort: 2222
              name: p2222
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - args:
            - web
          image: >-
            registry-intl-vpc.ap-northeast-1.aliyuncs.com/krca001/microservice-demo:2019-11-10_19-42-17.248_KST
          imagePullPolicy: IfNotPresent
          name: microservice-demo-default-2
          ports:
            - containerPort: 3333
              hostPort: 3333
              name: p3333
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
